# fbdl

./: .buildinfo  .gitignore  CLAUDE.md  README.md  REFACTORING.md  a_football_life.json  api.html  cfl_2025_schedule.json  cli.html  completed_profiles.json  draft_buzz_position_stat_mapping.json  draft_buzz_prospects.json  example-fbdl-conf.yaml  extract_mcmillen_vids.py  fbcm.yaml.example  fbdl.yaml.example  genindex.html  index.html  mendoza.json  objects.inv  prospect_urls.json  py-modindex.html  pyproject.toml  search.html  searchindex.js  test_output_data.json  update_metadata.py  usage.html  yt-dlp_examples.txt
.github/workflows/: check-version-bump.yml  ci.yml  publish-codeartifacts.yml
_modules/: index.html
_modules/fbdl/: base.html  mcmillen.html  nfl.html
_sources/: cli.rst.txt  usage.rst.txt
docs/: Makefile  api.rst  cli.rst  conf.py  fbdl.mcmillen.rst  index.rst  make.bat  usage.rst
docs/_build/doctrees/: api.doctree  cli.doctree  environment.pickle  fbdl.base.doctree  fbdl.doctree  fbdl.fbdl.doctree  fbdl.mcmillen.doctree  fbdl.nfl.doctree  index.doctree  modules.doctree  usage.doctree
docs/_build/html/: .buildinfo  api.html  cli.html  fbdl.base.html  fbdl.fbdl.html  fbdl.html  fbdl.mcmillen.html  fbdl.nfl.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/fbdl/: base.html  mcmillen.html  nfl.html
docs/_build/html/_sources/: fbdl.base.rst.txt  fbdl.fbdl.rst.txt  fbdl.nfl.rst.txt  fbdl.rst.txt  index.rst.txt  modules.rst.txt
docs/_static/: .gitkeep
docs/_templates/: .gitkeep
reference_examples/: db.html  dl.html  edge.html  lb.html  ol.html  qb.html  rb.html  te.html  wr.html
scripts/: validate-version-bump.sh
show_lists/: a_football_life.json  americas_game.json  cfl_game_gates.json  example_game.json  nfl_100_all_time_team.json  nfl_top_10.json  season_premiere_dates.json  steelers_game_dates.json  ufl_game_dates.json  uga_game_dates.json
src/fbcm/: base.py  constants.py  draft_buzz.py  fbcm.py  mcmillen.py  models.py  nfl.py  utils.py  word_gen.py
src/fbcm/docx/: __init__.py  word_gen.py
src/fbdl/: base.py  fbdl.py  mcmillen.py  nfl.py  utils.py
tests/: conftest.py  test_smoke.py
tests/data/: game_dates.json
tests/test_fbcm/: test_base.py  test_nfl.py
tests/test_fbdl/: test_base.py  test_nfl.py
