[project]
name="fbdl"
version="0.0.1"
description="My customized tools for downloading (American) football content"
requires-python=">=3.12"
dependencies = [
    "yt-dlp==2025.12.8",
    "click==8.3.1",
    "ffmpeg-python==0.2.0",
    "mutagen==1.47.0",
    "pycryptodomex==3.23.0",
    "black==25.12.0",
    # "sphinx==8.2.3",
    # "sphinx-click==6.1.0",
    # "sphinx_rtd_theme==3.0.2",
    "griddy==0.7.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
]

[project.scripts]
fbdl = "fbdl.fbdl:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling == 1.27.0"]
build-backend = "hatchling.build"